--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8">	
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="estilos.css"/>
     <title>Restaurante Mexicano</title>
 </head>
@@ -10,7 +11,7 @@
     <header id="cabecera">
         
         <img src="imagenes/logoP.png"
-        style="width: 120px; height: 120px; margin-left: 50vw; margin-top: 10vh;">
+        style="width: 120px; height: 120px; margin-left: 44vw; margin-top: 10vh;">
 
         <div id="navegacion">
             <h1 id="nav">
@@ -124,9 +125,13 @@
             <div id="promoTarjeta">
                 <img src="imagenes/tacos/tacos5.jpg">
                 <h4 style="font-size: 20px; font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
-                'Lucida Sans Unicode', Geneva, Verdana, sans-serif, 'Arial Narrow', Arial, sans-serif;">Viernes</h4>
+                'Lucida Sans Unicode', Geneva, Verdana, sans-serif, 'Arial Narrow', Arial, sans-serif;">
+                    Viernes
+                </h4>
                 <h3 style="font-size: 15px; font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
-                'Lucida Sans Unicode', Geneva, Verdana, sans-serif, 'Arial Narrow', Arial, sans-serif;">Tacos de pastor al 3x2</h3>
+                'Lucida Sans Unicode', Geneva, Verdana, sans-serif, 'Arial Narrow', Arial, sans-serif;">
+                    Tacos de pastor al 3x2
+                </h3>
             </div>
             
         </div>
