--- a/galeria.html
+++ b/galeria.html
@@ -26,7 +26,7 @@
                 </a>
             </h1>
             <h1 id="nav">
-                <a href="#promos" id="enlace">
+                <a href="index.html#promos" id="enlace">
                     Promociones
                 </a>
             </h1>
