--- a/menu.html
+++ b/menu.html
@@ -12,7 +12,7 @@
     <header id="cabecera">
         
         <img src="imagenes/logoP.png"
-        style="width: 120px; height: 120px; margin-left: 50vw; margin-top: 10vh;">
+        style="width: 120px; height: 120px; margin-left: 44vw; margin-top: 10vh;">
 
         <div id="navegacion">
             <h1 id="nav">
@@ -26,7 +26,7 @@
                 </a>
             </h1>
             <h1 id="nav">
-                <a href="#promos" id="enlace">
+                <a href="index.html#promos" id="enlace">
                     Promociones
                 </a>
             </h1>
@@ -112,7 +112,6 @@
                         </h4>    
                     </a>
                 </div>
-
             </div>
         </div>
     </div>
