--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">	
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="estilos.css"/>
+    <link rel="shortcut icon" href="/imagenes/logoal.png" />
     <title>Restaurante Mexicano</title>
 </head>
-<body style="margin: 0; margin-left: -20px;">
+<body style="margin: 0; margin-left: -17px;">
 
     <header id="cabecera">
         
-        <img src="imagenes/logoP.png"
-        style="width: 120px; height: 120px; margin-left: 44vw; margin-top: 10vh;">
+        <img src="imagenes/logoal.png"
+        style="width: 240px; height: 240px; margin-left: 44vw;">
 
         <div id="navegacion">
             <h1 id="nav">
@@ -20,7 +21,7 @@
                 </a>
             </h1>
             <h1 id="nav">
-                <a href="menu.html" id="enlace">
+                <a href="html/menu.html" id="enlace">
                     Menu
                 </a>
             </h1>
@@ -30,8 +31,8 @@
                 </a>
             </h1>
             <h1 id="nav">
-                <a href="galeria.html" id="enlace">
-                    Galeria
+                <a href="html/galeria.html" id="enlace">
+                    Galería
                 </a>
             </h1>
             
@@ -151,27 +152,29 @@
     <!--Pie de pagina-->
     <footer id="piePagina">
         <div id="Primersec">
-          <div style="display: flex; flex-direction: column; padding-right: 10%;">
-            <h1 style="color: beige; font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
-            'Lucida Sans Unicode', Geneva, Verdana, sans-serif, 'Arial Narrow', Arial, sans-serif;">Contacto:</h1>
-            <div id="iconos">
-              <h3 style="color: beige;font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
-              'Lucida Sans Unicode', Geneva, Verdana, sans-serif, 'Arial Narrow', Arial, sans-serif;">
-                    alfredobotello67@aragon.unam.mx
-              </h3>
+            <div style="display: flex; flex-direction: column; padding-right: 10%;">
+                <h1 style="color: beige; font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
+                'Lucida Sans Unicode', Geneva, Verdana, sans-serif, 'Arial Narrow', Arial, sans-serif;">
+                    Contacto:
+                </h1>
+                <div id="iconos">
+                    <h3 style="color: beige;font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
+                    'Lucida Sans Unicode', Geneva, Verdana, sans-serif, 'Arial Narrow', Arial, sans-serif;">
+                        alfredobotello67@aragon.unam.mx
+                    </h3>
+                </div>
             </div>
-          </div>
-          <div style="width: 300px;">
-            <!--Datos del autor-->
-            <h3 id="footer">BOTELLO HERRERA ALFREDO</h3>
-            <h3 id="footer">GRUPO 1507</h3>
-          </div>
-          <div style="width: 300px;">
-            <!--Datos de la materia-->
-            <h3 id="footer">PROGRAMACION WEB 1</h3>
-            <h3 id="footer">INGENIERÍA EN COMPUTACIÓN </h3>
-          </div>
+            <div style="width: 300px;">
+                <!--Datos del autor-->
+                <h3 id="footer">BOTELLO HERRERA ALFREDO</h3>
+                <h3 id="footer">GRUPO 1507</h3>
+            </div>
+            <div style="width: 300px;">
+                <!--Datos de la materia-->
+                <h3 id="footer">PROGRAMACION WEB 1</h3>
+                <h3 id="footer">INGENIERÍA EN COMPUTACIÓN </h3>
+            </div>
         </div>
-      </footer> 
+    </footer> 
 </body>
 </html>
