--- a/html/menu.html
+++ b/html/menu.html
@@ -5,16 +5,18 @@
     <!--<meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">-->
     <link rel="stylesheet" href="../estilos.css"/>
-    <link rel="shortcut icon" href="/imagenes/logoal.png" />
+    <link rel="shortcut icon" href="../imagenes/logo2a.png" />
     <title>Restaurante Mexicano</title>
 </head>
 <body style="margin: 0; margin-left: -17px;">
 
-    <header id="cabecera">
-        
-        <img src="../imagenes/logoal.png"
-        style="width: 240px; height: 240px; margin-left: 44vw;">
+    <div id="marca">
+        <img src="../imagenes/logo2a.png">
+        <h1>TACOS A. KRUGER</h1>
+    </div>
 
+    <header id="cabecera">
+    
         <div id="navegacion">
             <h1 id="nav">
                 <a href="../index.html" id="enlace">
