--- a/html/galeria.html
+++ b/html/galeria.html
@@ -5,15 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../estilos.css"/>
-    <link rel="shortcut icon" href="/imagenes/logoal.png" />
+    <link rel="shortcut icon" href="../imagenes/logo2a.png" />
     <title>Comida Mexicana</title>
 </head>
 <body style="margin: 0; margin-left: -17px;">
 
+    <div id="marca">
+        <img src="../imagenes/logo2a.png">
+        <h1>TACOS A. KRUGER</h1>
+    </div>
+
     <header id="cabecera">
-        
-        <img src="../imagenes/logoal.png"
-        style="width: 240px; height: 240px; margin-left: 44vw;">
 
         <div id="navegacion">
             <h1 id="nav">
@@ -85,7 +87,7 @@
     </div>
 
     <div id="volver">
-        <a href="#cabecera" id="enlace">
+        <a href="#marca" id="enlace">
             <h4>Volver arriba</h4>
         </a>
     </div>
