--- a/html/sopas.html
+++ b/html/sopas.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../estilos.css"/>
-    <link rel="shortcut icon" href="/imagenes/logoal.png" />
+    <link rel="shortcut icon" href="../imagenes/logo2a.png" />
     <title>Restaurante Mexicano</title>
 </head>
 <body style="margin: 0; margin-left: -17px;">
