Pagina completada y codigo comentado

--- a/html/galeria.html
+++ b/html/galeria.html
@@ -10,30 +10,36 @@
 </head>
 <body style="margin: 0; margin-left: -17px;">
 
+    <!--Imagen del logo y nombre del restaurante-->
     <div id="marca">
         <img src="../imagenes/logo2a.png">
-        <h1>TACOS A. KRUGER</h1>
+        <h1>TACOS A. KRÜGER</h1>
     </div>
 
+    <!--Encabezado-->
     <header id="cabecera">
-
+        <!--Navegacion-->
         <div id="navegacion">
             <h1 id="nav">
+                <!--Navegacion al inicio-->
                 <a href="../index.html" id="enlace">
                     Inicio
                 </a>
             </h1>
             <h1 id="nav">
+                <!--Navegacion al menu-->
                 <a href="menu.html" id="enlace">
                     Menu
                 </a>
             </h1>
             <h1 id="nav">
+                <!--Navegacion a promociones-->
                 <a href="../index.html#promos" id="enlace">
                     Promociones
                 </a>
             </h1>
             <h1 id="nav">
+                <!--Navegacion a la galeria-->
                 <a href="galeria.html" id="enlace">
                     Galería
                 </a>
@@ -42,42 +48,51 @@
         </div>
     </header>
 
+    <!--Contiene las imagenes de la galeria-->
     <div id="galeria">
+        <!--Primer apartado de la galeria-->
         <div id="galeriaP">
             <img src="../imagenes/Galeria/Foto1.png">
             <img src="../imagenes/Galeria/Foto2.png">
             <img src="../imagenes/Galeria/Foto3.png">
         </div>
         
+        <!--Segundo apartado de la galeria-->
         <div id="galeriaP">
             <img src="../imagenes/Galeria/Foto4.png">
             <img src="../imagenes/Galeria/Foto5.png">
             <img src="../imagenes/Galeria/Foto6.png">
         </div>
+
+        <!--Tercer apartado de la galeria-->
         <div id="galeriaP">
             <img src="../imagenes/Galeria/Foto7.png">
             <img src="../imagenes/Galeria/Foto8.png">
             <img src="../imagenes/Galeria/Foto9.png">
         </div>
 
+        <!--Cuarto apartado de la galeria-->
         <div id="galeriaP">
             <img src="../imagenes/Galeria/Foto10.png">
             <img src="../imagenes/Galeria/Foto11.png">
             <img src="../imagenes/Galeria/Foto12.png">
         </div>
 
+        <!--Quinto apartado de la galeria-->
         <div id="galeriaP">
             <img src="../imagenes/Galeria/Foto13.png">
             <img src="../imagenes/Galeria/Foto14.png">
             <img src="../imagenes/Galeria/Foto15.png">
         </div>
 
+        <!--Sexto apartado de la galeria-->
         <div id="galeriaP">
             <img src="../imagenes/Galeria/Foto16.png">
             <img src="../imagenes/Galeria/Foto17.png">
             <img src="../imagenes/Galeria/Foto18.png">
         </div>
 
+        <!--Septimo apartado de la galeria-->
         <div id="galeriaP">
             <img src="../imagenes/Galeria/Foto19.png">
             <img src="../imagenes/Galeria/Foto20.png">
@@ -86,25 +101,27 @@
 
     </div>
 
+    <!--Un texto que te envia hasta arriba de la pagina-->
     <div id="volver">
         <a href="#marca" id="enlace">
             <h4>Volver arriba</h4>
         </a>
     </div>
 
-    <div id="divisorFooter">
-
-    </div>
+    <!--Un divisor del contenido de la pagina con el pie de pagina-->
+    <div id="divisorFooter"></div>
 
     <!--Pie de pagina-->
     <footer id="piePagina">
-        <div id="Primersec">
-            <div style="display: flex; flex-direction: column; padding-right: 10%;">
+        <div id="contenido">
+            <div id="contacto">
+                <!--Datos de contacto-->
                 <h1 style="color: beige; font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
                 'Lucida Sans Unicode', Geneva, Verdana, sans-serif, 'Arial Narrow', Arial, sans-serif;">
                     Contacto:
                 </h1>
-                <div id="iconos">
+
+                <div>
                     <h3 style="color: beige;font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
                     'Lucida Sans Unicode', Geneva, Verdana, sans-serif, 'Arial Narrow', Arial, sans-serif;">
                         alfredobotello67@aragon.unam.mx
@@ -112,16 +129,18 @@
                 </div>
             </div>
             <div style="width: 300px;">
-                <!--Datos del autor-->
+                <!--Datos del alumno-->
                 <h3 id="footer">BOTELLO HERRERA ALFREDO</h3>
+
                 <h3 id="footer">GRUPO 1507</h3>
             </div>
             <div style="width: 300px;">
                 <!--Datos de la materia-->
                 <h3 id="footer">PROGRAMACION WEB 1</h3>
+
                 <h3 id="footer">INGENIERÍA EN COMPUTACIÓN </h3>
             </div>
         </div>
-    </footer>
+    </footer> 
 </body>
 </html>
