--- a/html/alambres.html
+++ b/html/alambres.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../estilos.css"/>
     <link rel="shortcut icon" href="../imagenes/logo2a.png" />
-    <title>Restaurante Mexicano</title>
+    <title>TACOS A. KRÜGER</title>
 </head>
 <body style="margin: 0; margin-left: -17px;">
 
