--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="estilos.css"/>
     <link rel="shortcut icon" href="../imagenes/logo2a.png" />
-    <title>Restaurante Mexicano</title>
+    <title>TACOS A. KRÜGER</title>
 </head>
 <body style="margin: 0; margin-left: -17px;">
 
