--- a/html/sopas.html
+++ b/html/sopas.html
@@ -131,6 +131,10 @@
                     'Lucida Sans Unicode', Geneva, Verdana, sans-serif, 'Arial Narrow', Arial, sans-serif;">
                         alfredobotello67@aragon.unam.mx
                     </h3>
+                    <a href="https://github.com/VellAlf">
+                        <img src="../imagenes/GitIcono.png"
+                        style="width: 50px; height: 50px;">
+                    </a>
                 </div>
             </div>
             <div style="width: 300px;">
